--- a/style.css
+++ b/style.css
@@ -1324,6 +1324,45 @@ nav.mega-menu {
   color: #555;
 }
 
+/* ✅ 2-kolonne grid per kategori */
+.menu-panel .menu-block {
+  display: grid;
+  grid-template-columns: 1.2fr 0.9fr;
+  gap: 32px;
+  padding-right: 32px;
+  border-right: 1px solid #eee;
+}
+
+.menu-panel .menu-block:last-child {
+  border-right: none;
+}
+
+/* Seksjonsoverskrifter */
+.menu-section h4 {
+  color: #0070f3;
+  margin-bottom: 8px;
+}
+
+/* Underseksjons-overskrift (Barn) */
+.menu-subtitle {
+  margin-top: 10px;
+  font-size: 13px;
+  font-weight: 600;
+  color: #444;
+}
+
+/* Lenker */
+.menu-section a {
+  display: block;
+  padding: 3px 0;
+  text-decoration: none;
+  color: #333;
+}
+
+.menu-section a:hover {
+  color: #0070f3;
+}
+
 
 
 
