--- a/style.css
+++ b/style.css
@@ -1726,9 +1726,9 @@ nav.mega-menu .menu-section a:hover {
 }
 
 
-=================================================
+/* =================================================
 STICKY MEGAMENY
-=================================================
+================================================= */
 
 .mega-menu {
   position: sticky;
@@ -1736,9 +1736,9 @@ STICKY MEGAMENY
   z-index: 999;
 }
 
-================================
+/* ================================
 STØRRE HOVEDBILDE PRODUCT.HTML
-================================
+================================ */
 
 #main-image {
   width: 100%;
@@ -1748,21 +1748,22 @@ STØRRE HOVEDBILDE PRODUCT.HTML
   object-fit: contain;
 }
 
-==================================
+/* ==================================
 SORT RAMME RUNDT HOVEDBILDET
-==================================
+================================== */
 
 .thumb.active {
   border-color: #000 !important;
 }
 
-==================================
+/* ==================================
 MELLOMROM THUMBNAILS -> HOVEDBILDE
-==================================
+================================== */
 
 .thumbnails {
   margin-right: 10px;
 }
+
 
 
 
